add prod env variables

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
-# postgres
+# postgres (dev only)
 export POSTGRES_USER="postgres"
 export POSTGRES_PASSWORD="postgres"
 export POSTGRES_DB="todo_dev"
+
+# prod variables
+# DATABASE_URL=""
+# MAILJET_API_KEY=""
+# MAILJET_SECRET_KEY=""
+# PHX_HOST=""
+# SECRET_KEY_BASE=""
